--- a/ps0.Rmd
+++ b/ps0.Rmd
@@ -65,7 +65,7 @@ To find out more about the dataset, type the following in your Console: `?datasa
 
 Based on the help file, how many rows and how many columns does the `datasaurus_dozen` file have? What are the variables included in the data frame? After you've added your response below, commit your changes with the commit message "Added answer for Ex 1", and push.
 
-> RESPONSE:
+> RESPONSE: The `datasaurus_dozen` file contains 1846 rows and 3 columns. The variables included are dataset, x, and y.
 
 Let's take a look at what these datasets are. To do so we can make a *frequency table* of the dataset variable:
 
