--- a/ps1A.Rmd
+++ b/ps1A.Rmd
@@ -30,7 +30,8 @@ Steps to proceed:
 ```{r, setup, include=FALSE}
 # Load packages here 
 library(mdsr)   
-
+library(ggplot2)
+library(dplyr)
 knitr::opts_chunk$set(
   tidy=FALSE,     # display code as typed
   size="small",   # slightly smaller font for code
@@ -129,7 +130,9 @@ p
 
 As you read through (and, better yet -- code along with (not required, but useful practice!)) -- the extended example on historical baby names in section 3.3.1, write down two questions you have about any of the R code used in that example.  (Your questions could be about what a specific part of the code -- ggplot or not -- is actually doing, or a more general question about any of the commands used.)  Please be thoughtful about your questions; we will use them (anonymously) in an exercise in class this week.
 
-> ANSWER: 
+> ANSWER:\newline
+Question 1: What does the `with()` function do? (Page 52, second code chunk) \newline
+Question 2: What is the purpose of the `arrow` argument? (Page 53, first code chunk)
 
 ```{r}
 # to get you started following along . . .
