--- a/homework/ps1B.Rmd
+++ b/homework/ps1B.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "STAT 231: Problem Set 1B"
-author: "YOUR NAME HERE"
+author: "Majd Rouhana"
 date: "due by 5 PM on Friday, September 4"
 output: pdf_document
 ---
@@ -46,15 +46,15 @@ Consider the data graphic for Career Paths at Williams College at: https://web.w
 
 a. What story does the data graphic tell?  What is the main message that you take away from it?
 
-> ANSWER:
+> ANSWER: The graphic shows groupings of all available majors at Williams College on the left side of the circle, and different career fields on the right side. The wider a segment is, the more students are in that major grouping. Hovering over each segment shows the segments splitting off into different sections of career fields on the right side, with some split-off sections being wider than others (again, with those that are wider having more students than other sections). Overall, the story the graphic is trying to tell is that there are a huge number of possibilities for career paths to take after studying at Williams. In addition, we're able to see which majors and career paths are more popular than others for students at Williams. The main message is that a Williams education can prepare you for any path you choose.
 
 b. Can the data graphic be described in terms of the taxonomy presented in this chapter?  If so, list the visual cues, coordinate system, and scale(s).  If not, describe the feature of this data graphic that lies outside of that taxonomy.
 
-> ANSWER:
+> ANSWER: Yes, the data graphic makes use of visual cues and scale (but not any coordinate system). The graphic's visual cues length (length of each category and each split-off section), color (different colors for different majors) and shading (the fifteen major groups are then split into three groups; language and arts are shades of blue, social sciences are shades of orange and hard sciences are shades of green). The graphic also makes use of a categorical scale with no ordering. 
 
 c. Critique and/or praise the visualization choices made by the designer.  Do they work? Are they misleading?  Thought-provoking?  Brilliant?  Are there things that you would have done differently?  Justify your response.
 
-> ANSWER:
+> ANSWER: I like the data graphic because it's very aesthetically appealing to me. At a first glance, it looks like all different types of majors are involved in all different types of fields, higlighting the power and flexibility a Williams degree gives you. However, I do feel that it's a bit confusing, as there is no numerical aspect to the graphic. One can see that section that are larger involve more students, but it's hard to tell how many students that really is. Also, without being able to hover over each section, the graphic is almost impossible to follow. It ultimately loses its appeal if it was in a purely printed form. I think that a more informational and easy-to-read graph would probably be side-by-side boxplots, but there's no denying the aesthetic appeal this graphic brings.
 
 
 \newpage
@@ -62,12 +62,16 @@ c. Critique and/or praise the visualization choices made by the designer.  Do th
 
 Explain why the following command does not color the data points blue, then write down the command that will turn the points blue.
 
-> ANSWER:
+> ANSWER: The following command doesn't color the data points blue because it is inside the paranthesis of the `aes()` function. Because of this, `color = "blue"` tells R to label the data points as the string "blue" inside the legend. If you place `color = "blue"` outside of `aes()` but within `geom_point()`, the points will turn blue.
 
 ```{r}
 library(ggplot2)
 ggplot(data = mpg) + 
   geom_point(mapping = aes(x = displ, y = hwy, color = "blue"))
+
+# turn the points blue
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy, color = "blue"), color = "blue")
 ```
 
 
@@ -79,7 +83,8 @@ Use the `MLB_teams` data in the `mdsr` package to create an informative data gra
 > ANSWER:
 
 ```{r}
-
+head(MLB_teams)
+ggplot(WPct ~ payroll, data = MLB_teams)
 ```
 
 
