--- a/labs/Lab03-wrangle-tidy.Rmd
+++ b/labs/Lab03-wrangle-tidy.Rmd
@@ -85,16 +85,18 @@ If we're interested in the relationship between spending and coverage, we'll onl
 
 ```{r}
 coverage2 <- coverage %>%
-  select(starts_with(c("2013", "2014")))
+  select(starts_with(c("Location", "2013", "2014")))
 spending2 <- coverage %>%
-  select(starts_with(c("2013", "2014")))
+  select(starts_with(c("Location", "2013", "2014")))
 ```
 
 Note that there are observations both for the US as a whole and DC.  Remove these observations from both datasets.
 
 ```{r}
-coverage3 <- coverage2[-c(1, 10),]
-spending3 <- spending2[-c(1, 10),]
+coverage3 <- coverage2 %>%
+  filter(Location != c("United States", "District of Columbia"))
+spending3 <- spending2 %>%
+  filter(Location != c("United States", "District of Columbia"))
 ```
 
 *This is a good place to pause, commit changes with the commit message "Added answer for Warm-up", and push.*
@@ -107,12 +109,12 @@ Let's start by creating a scatterplot with log(spending) on the x-axis and log(e
 
 First, sketch the scatterplot (don't worry about the actual x-y relationship, but be sure to identify the different variables that will be needed to create the plot).  What variables do you need in the dataset in order to create the scatterplot in ggplot?  What will each observation (row) in the dataset represent?
 
-> RESPONSE:  
+> RESPONSE: We need the variables of spending that include the total costs for each year and the employer coverage variable for each year. The rows in the dataset represent each state in the US.
 
 
 What are some of the steps that will need to be taken to get the data in that form?  
 
-> RESPONSE: 
+> RESPONSE: We can filter out the variables that we do not need to include. We can also transform the variables by multiplying them by log10.
 
 *When you're done with the above responses, leave your break-out room and come back to the main room!*
 
