--- a/labs/Lab06-text-as-data.Rmd
+++ b/labs/Lab06-text-as-data.Rmd
@@ -57,7 +57,7 @@ Hint: if the `read_csv` code below doesn't work, it's probably because R is not 
 ```{r}
 # even using the URLs embedded in the HTML code, some did not work
 # remove the poems for which we don't have the text
-path_in <- "INSERT PATH HERE"
+path_in <- "/home/class22/mrouhana22/git/majd_STAT231/labs"
 poems <- read_csv(paste0(path_in,"/DickinsonPoems.csv")) %>%
   filter(text != "Missing")
 ```
@@ -195,7 +195,19 @@ wordcloud(word_frequencies$word, word_frequencies$n
 Your turn: create a word cloud with 100 words.
 
 ```{r}
-
+wordcloud(word_frequencies$word, word_frequencies$n
+          , min.freq=20
+          , max.words=100
+          # plot the words in a random order
+          , random.order=T
+          # specify the range of the size of the words
+          , scale=c(2,0.3)
+          # specify proportion of words with 90 degree rotation
+          , rot.per=.15
+          # colors words from least to most frequent
+          , colors = pal
+          # font family
+          , family="sans")
 ```
 
 
@@ -207,7 +219,7 @@ The `bind_tf_idf` function will compute the tf, idf, and tf-idf statistics for u
 
 This time, we do not need to remove stop words.  Why not?
 
-> ANSWER: 
+> ANSWER: This is because `tfidf` decreases the weight of commonly used words--many of which are the stop words.
 
 ```{r}
 word_freqs_by_poem <- poems %>%
@@ -254,20 +266,18 @@ There are different lexicons that can be used to classify the sentiment of text.
 
 The AFINN lexicon (Nielsen 2011) assigns words a score from -5 (negative sentiment) to +5 (positive sentiment).  Check out the AFINN lexicon using the code below.  What do you think of the scores?  What is the rating for the word "slick"?  Does "slick" always have a positive connotation (can you think of a sentence where "slick" has a negative connotation)?
 
-> ANSWER:
+> ANSWER: "Slick" has a score of 2, implying a positive connotation. I don't think the word always has a positive connotation, though. If you say someone is slick, it could also mean they're something like a con-artist.
 
 ```{r}
 afinn_lexicon <- get_sentiments("afinn")
-
 ```
 
 Use the `get_sentiments` function to create a dataframe `nrc_lexicon` that holds the NRC Word-Emotion Association lexicon (Mohammad 2010).  The NRC lexicon catergoizes words as yes/no for the following sentiment categories: positive, negative, anger, anticipation, disgust, fear, joy, sadness, surprise, and trust.  What does each row in this dataset represent? (Hint: it's *not* the same as the `afinn_lexicon` dataset.)
 
-> ANSWER:
+> ANSWER: Each row is a word followed by the specific sentiment it implies. Words that contain multiple sentiments are on separate rows.
 
 ```{r}
 nrc_lexicon <- get_sentiments("nrc")
-
 ```
 
 
@@ -275,27 +285,43 @@ User (and Consumer!) Beware:
 
 - Do you see any issues in applying these lexicons (developed fairly recently) to the Emily Dickinson poems?
 
-> ANSWER:  
+> ANSWER: Yes, because the usage of words changes throughout time and sometimes it's hard to tell the sentiment of a word without reading it in context.
 
 - The lexicons are based on unigrams.  Do you see any disadvantages of basing the sentiment on single words?
 
-> ANSWER: 
+> ANSWER: Yes, because a lot of the time you can negate words by adding other words. For example, "wonderful" has a score of 4, but if someone said "my day was definitely not wonderful," the sentence has a negative connotation.
 
 
 We can calculate how many words used in the poems are not found in the lexicons.  Run the code below.  List a few words that are not in the NRC lexicon that appear in the poems.  What proportion of unigrams observed within this corpora of Dickinson poems are *not* scored by the NRC lexicon?  
 
-> ANSWER: 
+> ANSWER: Some words are "day," "thee" and "tis." The NRC lexicon misses 7961 words from Dickinson poems. 55% of all the words that appear in Dickinson poems. The lexicon itself only contains 6468 unique words. There are 120% more words missed in the Dickinson poems than the lexicon itself contains.
 
 ```{r}
 # identify words in word_frequencies dataset (which has stop words removed) that are not the NRC lexicon
 nrc_missed_words <- word_frequencies %>%
   anti_join(nrc_lexicon, by="word")
+nrc_lexicon %>%
+  distinct(word) %>%
+  summarize(count = n())
+7961/6468
 ```
 
 With these (rather important!) drawbacks in mind, let's go ahead and view the top words by sentiment classified by the NRC lexicon. That is, create a figure of the top 10 words under each sentiment, facetted by sentiment, for the following sentiments: anger, anticipation, fear, joy, surprise, and trust.  You can use code given in earlier chunks to guide you.
 
 ```{r}
-
+wordcloud(word_frequencies$word, word_frequencies$n
+          , min.freq=20
+          , max.words=10
+          # plot the words in a random order
+          , random.order=T
+          # specify the range of the size of the words
+          , scale=c(2,0.3)
+          # specify proportion of words with 90 degree rotation
+          , rot.per=.15
+          # colors words from least to most frequent
+          , colors = pal
+          # font family
+          , family="sans")
 
 ```
 
