--- a/homework/ps8A.Rmd
+++ b/homework/ps8A.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'STAT 231: Problem Set 8A'
-author: "YOUR NAME HERE"
+author: "Majd Rouhana"
 date: "due by 5 PM on Monday, November 2"
 output:
   pdf_document: default
@@ -47,7 +47,7 @@ Section 9.1.2 walks through an example of how k-means clustering can identify ge
 
 (a) Walk through the code and comments below to understand what the code is doing.  How many cities were identified as belonging to cluster 1?  What does cluster 1 represent?
 
-> ANSWER: 
+> ANSWER: 726 cities belong to cluster 1. Cluster 1 represents central Asia.
 
 ```{r}
 # the code in the textbook loads WorldCities, but the dataset name has since 
@@ -85,18 +85,33 @@ ggplot(data = BigCities_km, aes(x = longitude, y = latitude)) +
 
 (b) In k-means clustering, the analyst specifies the number of clusters to create.  Update the `center` argument within the `kmeans` function to identify 3 clusters instead of 6.  Create a plot like the one above, but coloring the points by these new cluster assignments.  How many cities are in cluster 1 now?  What does cluster 1 represent now?
 
-> ANSWER: 
+> ANSWER: There are 1466 cities in cluster 1 now. Cluster 1 now represents Europe, the Middle East and Africa.
 
 ```{r}
-
+set.seed(15)
+km_out2 <- kmeans(BigCities, centers = 3, nstart = 20)
+km_out2$size
+BigCities_km2 <- BigCities %>%
+  mutate(cluster = as.character(km_out2$cluster))
+ggplot(data = BigCities_km2, aes(x = longitude, y = latitude)) + 
+  geom_point(aes(color = cluster), alpha = 0.5) +
+  geom_point(data = as.data.frame(km_out$centers), shape = "X", size = 3)
 ```
 
 (c) Lastly, update the `center` argument within the `kmeans` function to identify 15 clusters.  Create a plot like the one above, but coloring the points by these new cluster assignments.  How many cities are in cluster 1 now?  What does cluster 1 represent now?
 
-> ANSWER:     
+> ANSWER: There are 593 cities in cluster 1 now. Cluster 1 represents Central Asia (mostly the Indian subcontinent).
 
 ```{r}
-
+set.seed(15)
+km_out3 <- kmeans(BigCities, centers = 15, nstart = 20)
+km_out3$size
+BigCities_km3 <- BigCities %>%
+  mutate(cluster = as.character(km_out3$cluster))
+ggplot(data = BigCities_km3, aes(x = longitude, y = latitude)) + 
+  geom_point(aes(color = cluster), alpha = 0.5) +
+  geom_point(data = as.data.frame(km_out$centers), shape = "X", size = 3) +
+  scale_color_discrete(breaks = sort(as.numeric(rownames(BigCities_km3))))
 ```
 
 
